cmake_minimum_required(VERSION 3.29)
project(busticketproject)

set(CMAKE_CXX_STANDARD 20)

add_executable(busticketproject main.cpp
        ticket.h
        ticket.h
        ticket.cpp
        ticket.cpp
        trip.h
        trip.h
        trip.h
        trip.cpp
        trip.cpp
        customer.h
        customer.h
        customer.cpp
        customer.cpp
        trip.cpp
        customer.h
        customer.cpp
        customer.h)
